Spring Framework. Урок 20: Cамостоятельная работа, калькулятор!

--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3org/1999xhtml">
+<html lang="ru" xmlns:th="http://www.w3org/1999xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Hello</title>
