--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru" xmlns:th="http://thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Человек</title>
 </head>
     <body>
         <p th:text="${person.getName()}">VALUE</p>
+        <p th:text="${person.getEmail()}">VALUE</p>
         <p th:text="${person.getId()}">VALUE</p>
 
         <a th:href="@{/people/{id}/edit(id=${person.getId()})}">Edit</a>
